# numeric

./: .doxyfile  .gitignore  README.md  meson.build
headers/: meson.build  models.hpp
headers/benchmark/: benchmark.hpp
headers/math/: matrix.hpp  rref.hpp  vector.hpp  vectorspaces.hpp
headers/numeric/benchmark/: benchmark.hpp
headers/numeric/math/: errors.hpp  gaussjordan.hpp  rref.hpp  vectorspaces.hpp
headers/numeric/types/: fraction.hpp  matrix.hpp  models.hpp  plane.hpp  vector.hpp
headers/types/: fraction.hpp  matrix.hpp  models.hpp  plane.hpp  vector.hpp
src/: main.cc  meson.build
tst/: meson.build  testbenchmark.cc  testfractions.cc  testgauss.cc  testmatrix.cc  testplanes.cc  testrref.cc  testvector.cc  testvectorspaces.cc
