install_headers('numeric/benchmark/benchmark.hpp', install_dir: 'numeric/benchmark')

install_headers('numeric/math/rref.hpp', install_dir: 'numeric/math')
install_headers('numeric/math/vectorspaces.hpp', install_dir: 'numeric/math')

install_headers('numeric/types/fraction.hpp', install_dir: 'numeric/types')
install_headers('numeric/types/matrix.hpp', install_dir: 'numeric/types')
install_headers('numeric/types/models.hpp', install_dir: 'numeric/types')
install_headers('numeric/types/plane.hpp', install_dir: 'numeric/types')
install_headers('numeric/types/vector.hpp', install_dir: 'numeric/types')